Bug 1024858 - Improve buffered range calculation for MediaSource objects.  r=cajbir