content/media/mediasource/SourceBuffer.h
@@ -111,9 +111,8 @@ public:
   // Returns true if the data in the source buffer contains the given time.
   bool ContainsTime(double aTime);
 
-    // Provide the minimum start time and maximum end time that is available
-  // in the data buffered by this SourceBuffer.
-  void GetBufferedStartEndTime(double* aStart, double* aEnd);
+  double GetBufferedStart();
+  double GetBufferedEnd();
 
 private:
   ~SourceBuffer();
@@ -146,6 +145,7 @@ private:
   nsAutoPtr<ContainerParser> mParser;
 
   nsRefPtr<SubBufferDecoder> mDecoder;
+  nsTArray<nsRefPtr<SubBufferDecoder>> mDecoders;
 
   double mAppendWindowStart;
   double mAppendWindowEnd;
